syntax = "proto3";

package hotel;

option java_multiple_files = true;
option java_package = "com.example.hotel.grpc";
option java_outer_classname = "ReservationProto";

service ReservationService {
    rpc CreateReservation (CreateReservationRequest) returns (ReservationResponse);
    rpc GetReservation (GetReservationRequest) returns (ReservationResponse);
    rpc UpdateReservation (UpdateReservationRequest) returns (ReservationResponse);
    rpc DeleteReservation (DeleteReservationRequest) returns (DeleteReservationResponse);
}

message Client {
    int64 id = 1;
    string nom = 2;
    string prenom = 3;
    string email = 4;
    string telephone = 5;
}

message Chambre {
    int64 id = 1;
    string type = 2;
    double prix = 3;
    bool disponible = 4;
}

message Reservation {
    int64 id = 1;
    Client client = 2;
    Chambre chambre = 3;
    string dateDebut = 4;
    string dateFin = 5;
    string preferences = 6;
}

message CreateReservationRequest {
    Client client = 1;
    Chambre chambre = 2;
    string dateDebut = 3;
    string dateFin = 4;
    string preferences = 5;
}

message GetReservationRequest {
    int64 id = 1;
}

message UpdateReservationRequest {
    int64 id = 1;
    string dateDebut = 2;
    string dateFin = 3;
    string preferences = 4;
}

message DeleteReservationRequest {
    int64 id = 1;
}

message ReservationResponse {
    Reservation reservation = 1;
}

message DeleteReservationResponse {
    bool success = 1;
}
